@@ -153,8 +153,14 @@ void udp_socket::send_hostname(char const* hostname, int port
 	}
 
 	// this function is only supported when we're using a proxy
-	TORRENT_ASSERT(m_queue_packets);
-	if (!m_queue_packets) return;
+	if (!m_queue_packets)
+	{
+		address target = address::from_string(hostname, ec);
+		if (!ec) send(udp::endpoint(target, port), p, len, ec, 0);
+		return;
+	}
+
+	if (m_queue.size() > 1000) return;
 
 	m_queue.push_back(queued_packet());
 	queued_packet& qp = m_queue.back();
@@ -186,13 +192,11 @@ void udp_socket::send(udp::endpoint const& ep, char const* p, int len
 			wrap(ep, p, len, ec);
 			return;	
 		}
-		else if (m_force_proxy)
-		{
-			return;
-		}
 
 		if (m_queue_packets)
 		{
+			if (m_queue.size() > 1000) return;
+
 			m_queue.push_back(queued_packet());
 			queued_packet& qp = m_queue.back();
 			qp.ep = ep;
@@ -202,10 +206,8 @@ void udp_socket::send(udp::endpoint const& ep, char const* p, int len
 			return;
 		}
 	}
-	else if (m_force_proxy)
-	{
-		return;
-	}
+
+	if (m_force_proxy) return;
 
 #if TORRENT_USE_IPV6
 	if (ep.address().is_v6() && m_ipv6_sock.is_open())
@@ -777,6 +779,9 @@ void udp_socket::on_name_lookup(error_code const& e, tcp::resolver::iterator i)
 	if (e)
 	{
 		call_handler(e, udp::endpoint(), 0, 0);
+
+		drain_queue();
+
 		return;
 	}
 
@@ -818,7 +823,10 @@ void udp_socket::on_timeout()
 		+ m_outstanding_resolve
 		+ m_outstanding_connect_queue
 		+ m_outstanding_socks);
+	m_queue_packets = false;
+
 	if (m_abort) return;
+
 	CHECK_MAGIC;
 	TORRENT_ASSERT(is_single_thread());
 
@@ -974,7 +982,11 @@ void udp_socket::handshake1(error_code const& e)
 		+ m_outstanding_socks);
 	if (m_abort) return;
 	CHECK_MAGIC;
-	if (e) return;
+	if (e)
+	{
+		drain_queue();
+		return;
+	}
 
 	TORRENT_ASSERT(is_single_thread());
 
@@ -1008,7 +1020,11 @@ void udp_socket::handshake2(error_code const& e)
 	if (m_abort) return;
 	CHECK_MAGIC;
 
-	if (e) return;
+	if (e)
+	{
+		drain_queue();
+		return;
+	}
 
 	using namespace libtorrent::detail;
 
@@ -1018,7 +1034,13 @@ void udp_socket::handshake2(error_code const& e)
 	int version = read_uint8(p);
 	int method = read_uint8(p);
 
-	if (version < 5) return;
+	if (version < 5)
+	{
+		error_code ec;
+		m_socks5_sock.close(ec);
+		drain_queue();
+		return;
+	}
 
 	if (method == 0)
 	{
@@ -1030,6 +1052,7 @@ void udp_socket::handshake2(error_code const& e)
 		{
 			error_code ec;
 			m_socks5_sock.close(ec);
+			drain_queue();
 			return;
 		}
 
@@ -1053,6 +1076,7 @@ void udp_socket::handshake2(error_code const& e)
 	}
 	else
 	{
+		drain_queue();
 		error_code ec;
 		m_socks5_sock.close(ec);
 		return;
@@ -1077,7 +1101,11 @@ void udp_socket::handshake3(error_code const& e)
 		+ m_outstanding_socks);
 	if (m_abort) return;
 	CHECK_MAGIC;
-	if (e) return;
+	if (e)
+	{
+		drain_queue();
+		return;
+	}
 
 	TORRENT_ASSERT(is_single_thread());
 
@@ -1110,7 +1138,11 @@ void udp_socket::handshake4(error_code const& e)
 		+ m_outstanding_socks);
 	if (m_abort) return;
 	CHECK_MAGIC;
-	if (e) return;
+	if (e)
+	{
+		drain_queue();
+		return;
+	}
 
 	TORRENT_ASSERT(is_single_thread());
 
@@ -1120,8 +1152,11 @@ void udp_socket::handshake4(error_code const& e)
 	int version = read_uint8(p);
 	int status = read_uint8(p);
 
-	if (version != 1) return;
-	if (status != 0) return;
+	if (version != 1 || status != 0)
+	{
+		drain_queue();
+		return;
+	}
 
 	socks_forward_udp(/*l*/);
 }
@@ -1170,7 +1205,11 @@ void udp_socket::connect1(error_code const& e)
 		+ m_outstanding_socks);
 	if (m_abort) return;
 	CHECK_MAGIC;
-	if (e) return;
+	if (e)
+	{
+		drain_queue();
+		return;
+	}
 
 	TORRENT_ASSERT(is_single_thread());
 
@@ -1210,7 +1249,7 @@ void udp_socket::connect2(error_code const& e)
 	CHECK_MAGIC;
 	if (e)
 	{
-		m_queue.clear();
+		drain_queue();
 		return;
 	}
 
@@ -1226,7 +1265,7 @@ void udp_socket::connect2(error_code const& e)
 
 	if (version != 5 || status != 0)
 	{
-		m_queue.clear();
+		drain_queue();
 		return;
 	}
 
@@ -1239,29 +1278,12 @@ void udp_socket::connect2(error_code const& e)
 	{
 		// in this case we need to read more data from the socket
 		TORRENT_ASSERT(false && "not implemented yet!");
-		m_queue.clear();
+		drain_queue();
 		return;
 	}
 	
 	m_tunnel_packets = true;
-	m_queue_packets = false;
-
-	// forward all packets that were put in the queue
-	while (!m_queue.empty())
-	{
-		queued_packet const& p = m_queue.front();
-		error_code ec;
-		if (p.hostname)
-		{
-			udp_socket::send_hostname(p.hostname, p.ep.port(), &p.buf[0], p.buf.size(), ec);
-			free(p.hostname);
-		}
-		else
-		{
-			udp_socket::send(p.ep, &p.buf[0], p.buf.size(), ec, p.flags);
-		}
-		m_queue.pop_front();
-	}
+	drain_queue();
 
 #if defined TORRENT_ASIO_DEBUGGING
 	add_outstanding_async("udp_socket::hung_up");
@@ -1298,6 +1320,28 @@ void udp_socket::hung_up(error_code const& e)
 
 	// the socks connection was closed, re-open it
 	set_proxy_settings(m_proxy_settings);
+}
+
+void udp_socket::drain_queue()
+{
+	m_queue_packets = false;
+
+	// forward all packets that were put in the queue
+	while (!m_queue.empty())
+	{
+		queued_packet const& p = m_queue.front();
+		error_code ec;
+		if (p.hostname)
+		{
+			udp_socket::send_hostname(p.hostname, p.ep.port(), &p.buf[0], p.buf.size(), ec);
+			free(p.hostname);
+		}
+		else if (!m_force_proxy) // block incoming packets that aren't coming via the proxy
+		{
+			udp_socket::send(p.ep, &p.buf[0], p.buf.size(), ec, p.flags);
+		}
+		m_queue.pop_front();
+	}
 }
 
 rate_limited_udp_socket::rate_limited_udp_socket(io_service& ios
